--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-dom": "^18.3.1",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.3.0",
+    "react-modal": "^3.16.3",
     "react-otp-input": "^3.1.1",
     "react-parallax-tilt": "^1.7.274",
     "react-progressbar": "^15.4.1",
