--- a/package.json
+++ b/package.json
@@ -19,11 +19,13 @@
     "chart.js": "^4.4.7",
     "copy-to-clipboard": "^3.3.3",
     "crypto-js": "^4.2.0",
+    "date-fns": "^4.1.0",
     "emoji-picker-react": "^4.12.0",
     "ethers": "^5.7.2",
     "formik": "^2.4.6",
     "lucide-react": "^0.539.0",
     "moment": "^2.30.1",
+    "rc-slider": "^11.1.8",
     "react": "^18.3.1",
     "react-apexcharts": "^1.7.0",
     "react-chartjs-2": "^5.3.0",
