--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "emoji-picker-react": "^4.12.0",
     "ethers": "^5.7.2",
     "formik": "^2.4.6",
+    "lodash": "^4.17.21",
     "lucide-react": "^0.539.0",
     "moment": "^2.30.1",
     "rc-slider": "^11.1.8",
