--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "Dotpyworld",
-  "name": "Dotpyworld",
+  "short_name": "SonaSutra",
+  "name": "SonaSutra",
   "icons": [
     {
       "src": "favicon.ico",
