--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "react-router-dom": "^6.28.0",
     "react-scripts": "5.0.1",
     "react-slick": "^0.30.3",
+    "react-toastify": "^11.0.5",
     "react-type-animation": "^3.2.0",
     "redux-persist": "^6.0.0",
     "slick-carousel": "^1.8.1",
