--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "emoji-picker-react": "^4.12.0",
     "ethers": "^5.7.2",
     "formik": "^2.4.6",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^3.0.3",
     "lodash": "^4.17.21",
     "lucide-react": "^0.539.0",
     "moment": "^2.30.1",
