--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "formik": "^2.4.6",
     "html2canvas": "^1.4.1",
     "jspdf": "^3.0.3",
+    "jspdf-autotable": "^5.0.2",
     "lodash": "^4.17.21",
     "lucide-react": "^0.539.0",
     "moment": "^2.30.1",
