--- a/package.json
+++ b/package.json
@@ -60,8 +60,8 @@
     "yup": "^1.7.0"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "set \"GENERATE_SOURCEMAP=false\" &&  react-scripts build",
+    "start": "cross-env HOST=0.0.0.0 react-scripts start",
+    "build": "set \"GENERATE_SOURCEMAP=false\" && react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
@@ -84,6 +84,7 @@
     ]
   },
   "devDependencies": {
+    "cross-env": "^10.1.0",
     "tailwindcss": "^3.4.15"
   }
 }
